syntax = "proto3";

option csharp_namespace = "Branches.Grpc";

service BranchesGrpc {
  rpc GetBranchNameByBranchId (BranchNameRequest) returns (BranchNameResponse);
  rpc GetBranchNameForBranchIds (GetBranchNamesBatchRequest) returns (GetBranchNamesBatchResponse);
}

message BranchNameRequest {
  string branchId = 1;
}

message BranchNameResponse {
  string name = 1;
}

message GetBranchNamesBatchRequest {
    repeated string branchIds = 1;
}

message BranchNameItem {
    string branchId = 1;
    string branchName = 2;
}

message GetBranchNamesBatchResponse {
    repeated BranchNameItem items = 1;
}
